Updates CSS stylesheet. Adds template for 'current' end-point. Uses the 'current' template using the jinja2 engine.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,3 +2,20 @@ body
 {
     margin-left:50px;
 }
+
+p.price
+{
+    width:400px;
+}
+
+span.price
+{
+    float:right;
+}
+
+span.hyphen
+{
+    width:30px;
+    display: inline-block;
+    text-align: center;
+}
