--- a/static/css/graph_delta.css
+++ b/static/css/graph_delta.css
@@ -30,7 +30,13 @@
     right: 0;
 }
 
-#header
+p.alignleft
+{
+    float: left;
+    margin-left: 5%;
+}
+
+p.alignright
 {
     float: right;
     margin-right: 5%;
