Modify the current page template

--- a/templates/current.html
+++ b/templates/current.html
@@ -5,8 +5,9 @@
 </head>
 
 <body>
-    </br>
-    <p class="price"><b>Current Price:</b><span class="price">{{time}}<span class="hyphen">-</span>${{buy}}<span class="hyphen">-</span>${{sell}}</span></p>
-    </br>
+    <p class="price"><b>Current Bitcoin Price:</b> ({{time}})</p>
+
+    <p class="price"><span class="price"><b>Buy:</b> ${{buy}}</span></p>
+    <p class="price"><span class="price"><b>Sell:</b> ${{sell}}</span></p>
 </body>
 </html>
