--- a/templates/current.html
+++ b/templates/current.html
@@ -5,9 +5,10 @@
 </head>
 
 <body>
-    <p class="price"><b>Current Bitcoin Price:</b> ({{time}})</p>
+    <p><b>Current Bitcoin Price:</b> ({{time}})</p>
 
-    <p class="price"><span class="price"><b>Buy:</b> ${{buy}}</span></p>
-    <p class="price"><span class="price"><b>Sell:</b> ${{sell}}</span></p>
+    <br/>
+    <p class="price right"><b>Buy:</b> ${{buy}}</p>
+    <p class="price right"><b>Sell:</b> ${{sell}}</p>
 </body>
 </html>
