--- a/templates/current.html
+++ b/templates/current.html
@@ -5,9 +5,8 @@
 </head>
 
 <body>
-    <p><b>Current Bitcoin Price:</b> ({{time}})</p>
+    <p class="price"><b>Current Bitcoin Price:</b><span class="floatr">({{time}})</span></p>
 
-    <br/>
     <p class="price right"><b>Buy:</b> ${{buy}}</p>
     <p class="price right"><b>Sell:</b> ${{sell}}</p>
 </body>
