--- a/templates/recent.html
+++ b/templates/recent.html
@@ -17,8 +17,8 @@
             {% for row in rows %}
                 <tr>
                     <td>{{row.0}}</td>
-                    <td>{{row.1}}</td>
-                    <td>{{row.2}}</td>
+                    <td>{{'%0.2f' | format(row.1|float)}}</td>
+                    <td>{{'%0.2f' | format(row.2|float)}}</td>
                 </tr>
             {% endfor %}
     </table>
