--- a/templates/recent.html
+++ b/templates/recent.html
@@ -16,7 +16,7 @@
         </tr>
             {% for row in rows %}
                 <tr>
-                    <td>{{row.0}}</td>
+                    <td class="center">{{row.0}}</td>
                     <td>{{'%0.2f' | format(row.1|float)}}</td>
                     <td>{{'%0.2f' | format(row.2|float)}}</td>
                 </tr>
