Max and min buy and sell prices are now shown in bold.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -44,6 +44,10 @@ p.price
     text-align: center;
 }
 
+#prices td.bold {
+    font-weight: bold;
+}
+
 #prices th {
     font-size: 1.1em;
     text-align: left;
